[package]
name = "relay-millau-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }

# Supported Chains

bp-millau = { path = "../../primitives/chain-millau" }
bp-runtime = { path = "../../primitives/runtime" }
millau-runtime = { path = "../../bin/millau/runtime" }

# Substrate Dependencies

frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "obrok/aleph-v0.9.41-wasmtime8" }
frame-system = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "obrok/aleph-v0.9.41-wasmtime8" }
pallet-transaction-payment = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "obrok/aleph-v0.9.41-wasmtime8" }
